--- a/videos.html
+++ b/videos.html
@@ -65,24 +65,24 @@
         <p style="padding: 5px;border-radius: 13px;border-style: solid;border-color: var(--bs-gray-300);"><span style="font-weight: normal !important; font-style: normal !important; color: rgb(0, 0, 0); background-color: rgb(255, 255, 255);">Désormais messieurs et dames, vous avez la solution de vos billets chez nous en toute garantie.</span><br></p>
         <section class="clean-block clean-info dark" style="margin-bottom: 20px;">
             <div class="container">
-                <div class="videoWrapper"><video class="embed-responsive-item" width="100%" height="100%" controls="" src="assets/videos/video2.mp4"></video></div>
+                <div class="videoWrapper"><video class="embed-responsive-item" width="100%" height="100%" controls="" src="assets/videos/video2.mp4" style="width: 100%;height: 170px;"></video></div>
             </div>
         </section>
         <p style="padding: 5px;border-radius: 13px;border-style: solid;border-color: var(--bs-gray-300);"><span style="font-weight: normal !important; font-style: normal !important; color: rgb(0, 0, 0); background-color: rgb(255, 255, 255);">Le nettoyage Dollars noirs, Euros, Livres, Dinars algériens, Tunisie et toute autre monnaie de toute couleur de la sécurité à son état d'origine.</span><br></p>
         <section class="clean-block clean-info dark" style="margin-bottom: 20px;">
             <div class="container">
-                <div class="videoWrapper"><video class="embed-responsive-item" width="100%" height="100%" controls="" src="assets/videos/video3.mp4"></video></div>
+                <div class="videoWrapper"><video class="embed-responsive-item" width="100%" height="100%" controls="" src="assets/videos/video3.mp4" style="width: 100%;height: 170px;"></video></div>
             </div>
         </section>
         <p style="padding: 5px;border-radius: 13px;border-style: solid;border-color: var(--bs-gray-300);"><span style="font-weight: normal !important; font-style: normal !important; color: rgb(0, 0, 0); background-color: rgb(255, 255, 255);">Nous vous proposons des machines automatiques avec nos techniciens pour faire les gros travaux de conservation et le réseautage des billets noirs. Preparatifs et liquide de degivrage préparé, SSD solution anti-gel. Vectrol pâte, solution Tebi-Manetic, nettoyage chimique.</span><br></p>
         <section class="clean-block clean-info dark" style="margin-bottom: 20px;">
             <div class="container">
-                <div class="videoWrapper"><video class="embed-responsive-item" width="100%" height="100%" controls="" src="assets/videos/video4.mp4"></video></div>
+                <div class="videoWrapper"><video class="embed-responsive-item" width="100%" height="100%" controls="" src="assets/videos/video4.mp4" style="height: 170px;width: 100%;"></video></div>
             </div>
         </section>
         <section class="clean-block clean-info dark" style="margin-bottom: 20px;">
             <div class="container">
-                <div class="videoWrapper"><video class="embed-responsive-item" width="100%" height="100%" controls="" src="assets/videos/video5.mp4"></video></div>
+                <div class="videoWrapper"><video class="embed-responsive-item" width="100%" height="100%" controls="" src="assets/videos/video5.mp4" style="width: 100%;height: 170px;"></video></div>
             </div>
         </section>
     </div>
