--- a/videos.html
+++ b/videos.html
@@ -59,13 +59,15 @@
         <p style="padding: 5px;border-radius: 13px;border-style: solid;border-color: var(--bs-gray-300);"><span style="font-weight: normal !important; font-style: normal !important; color: rgb(0, 0, 0); background-color: rgb(255, 255, 255);">Si votre argent est marqué de cachets sécurisé, couche isotherme caché, billets noirs, verts, bleus ou rouges et que vous êtes dans l’incapacité de trouver un spécialiste fiable pour le nettoyer.</span><br></p>
         <section class="clean-block clean-info dark" style="margin-bottom: 20px;">
             <div class="container">
-                <div class="videoWrapper"><video class="embed-responsive-item" width="100%" height="100%" controls="" src="assets/videos/video1.mp4"></video></div>
+                <div class="videoWrapper"><video class="embed-responsive-item" controls="" src="assets/videos/video1.mp4" width="100%" height="100%">
+                        <source src="assets/videos/video1.mp4" type="video/mp4">
+                    </video></div>
             </div>
         </section>
         <p style="padding: 5px;border-radius: 13px;border-style: solid;border-color: var(--bs-gray-300);"><span style="font-weight: normal !important; font-style: normal !important; color: rgb(0, 0, 0); background-color: rgb(255, 255, 255);">Désormais messieurs et dames, vous avez la solution de vos billets chez nous en toute garantie.</span><br></p>
         <section class="clean-block clean-info dark" style="margin-bottom: 20px;">
             <div class="container">
-                <div class="videoWrapper"><video class="embed-responsive-item" width="100%" height="100%" controls="" src="assets/videos/video2.mp4" style="width: 100%;height: 170px;"></video></div>
+                <div class="videoWrapper"><video class="embed-responsive-item" width="100%" height="100%" controls="" src="assets/videos/video2.mp4"></video></div>
             </div>
         </section>
         <p style="padding: 5px;border-radius: 13px;border-style: solid;border-color: var(--bs-gray-300);"><span style="font-weight: normal !important; font-style: normal !important; color: rgb(0, 0, 0); background-color: rgb(255, 255, 255);">Le nettoyage Dollars noirs, Euros, Livres, Dinars algériens, Tunisie et toute autre monnaie de toute couleur de la sécurité à son état d'origine.</span><br></p>
