--- a/videos.html
+++ b/videos.html
@@ -59,7 +59,7 @@
         <p style="padding: 5px;border-radius: 13px;border-style: solid;border-color: var(--bs-gray-300);"><span style="font-weight: normal !important; font-style: normal !important; color: rgb(0, 0, 0); background-color: rgb(255, 255, 255);">Si votre argent est marqué de cachets sécurisé, couche isotherme caché, billets noirs, verts, bleus ou rouges et que vous êtes dans l’incapacité de trouver un spécialiste fiable pour le nettoyer.</span><br></p>
         <section class="clean-block clean-info dark" style="margin-bottom: 20px;">
             <div class="container">
-                <div class="videoWrapper"><video class="embed-responsive-item" controls="" src="assets/videos/video1.mp4" width="100%" height="100%">
+                <div class="videoWrapper"><video class="embed-responsive-item" controls="" src="assets/videos/video1.mp4" width="100%">
                         <source src="assets/videos/video1.mp4" type="video/mp4">
                     </video></div>
             </div>
