--- a/videos.html
+++ b/videos.html
@@ -57,40 +57,40 @@
     <div class="container" style="margin-top: 74px;padding: 24px 12px;">
         <h1 class="text-center" style="padding: 12px 12px;padding-bottom: 12px;margin-bottom: 30px;border-radius: 25px;border: 5px solid var(--bs-gray-300) ;">Videos de Presentation</h1>
         <p style="padding: 5px;border-radius: 13px;border-style: solid;border-color: var(--bs-gray-300);"><span style="font-weight: normal !important; font-style: normal !important; color: rgb(0, 0, 0); background-color: rgb(255, 255, 255);">Si votre argent est marqué de cachets sécurisé, couche isotherme caché, billets noirs, verts, bleus ou rouges et que vous êtes dans l’incapacité de trouver un spécialiste fiable pour le nettoyer.</span><br></p>
-        <section class="clean-block clean-info dark" style="margin-bottom: 20px;">
-            <div class="container" style="height: auto;padding: 0px;">
-                <div class="videoWrapper" style="height: auto;padding: 0px;"><video class="embed-responsive-item" controls="" src="assets/videos/video1.mp4" width="100%" height="auto" style="height: auto;">
+        <section class="clean-block clean-info dark" style="margin-bottom: 20px;border-radius: 10px;">
+            <div class="container" style="height: auto;padding: 0px;border-radius: 10px;">
+                <div class="videoWrapper" style="height: auto;padding: 0px;border-radius: 10px;"><video class="embed-responsive-item" controls="" src="assets/videos/video1.mp4" width="100%" height="auto" style="height: auto;border-radius: 10px;">
                         <source src="assets/videos/video1.mp4" type="video/mp4">
                     </video></div>
             </div>
         </section>
         <p style="padding: 5px;border-radius: 13px;border-style: solid;border-color: var(--bs-gray-300);"><span style="font-weight: normal !important; font-style: normal !important; color: rgb(0, 0, 0); background-color: rgb(255, 255, 255);">Désormais messieurs et dames, vous avez la solution de vos billets chez nous en toute garantie.</span><br></p>
-        <section class="clean-block clean-info dark" style="margin-bottom: 20px;">
+        <section class="clean-block clean-info dark" style="margin-bottom: 20px;border-radius: 10px;">
             <div class="container" style="height: auto;padding: 0px;">
-                <div class="videoWrapper" style="padding: 0px;height: auto;"><video class="embed-responsive-item" width="100%" height="auto" controls="" src="assets/videos/video2.mp4" style="height: auto;">
+                <div class="videoWrapper" style="padding: 0px;height: auto;"><video class="embed-responsive-item" width="100%" height="auto" controls="" src="assets/videos/video2.mp4" style="height: auto;border-radius: 10px;">
                         <source src="assets/videos/video2.mp4" type="video/mp4">
                     </video></div>
             </div>
         </section>
         <p style="padding: 5px;border-radius: 13px;border-style: solid;border-color: var(--bs-gray-300);"><span style="font-weight: normal !important; font-style: normal !important; color: rgb(0, 0, 0); background-color: rgb(255, 255, 255);">Le nettoyage Dollars noirs, Euros, Livres, Dinars algériens, Tunisie et toute autre monnaie de toute couleur de la sécurité à son état d'origine.</span><br></p>
-        <section class="clean-block clean-info dark" style="margin-bottom: 20px;">
+        <section class="clean-block clean-info dark" style="margin-bottom: 20px;border-radius: 10px;">
             <div class="container" style="padding: 0px;">
-                <div class="videoWrapper" style="height: auto;padding: 0px;"><video class="embed-responsive-item" width="100%" height="auto" controls="" src="assets/videos/video3.mp4" style="width: 100%;height: auto;">
+                <div class="videoWrapper" style="height: auto;padding: 0px;"><video class="embed-responsive-item" width="100%" height="auto" controls="" src="assets/videos/video3.mp4" style="width: 100%;height: auto;border-radius: 10px;">
                         <source src="assets/videos/video3.mp4" type="video/mp4">
                     </video></div>
             </div>
         </section>
         <p style="padding: 5px;border-radius: 13px;border-style: solid;border-color: var(--bs-gray-300);"><span style="font-weight: normal !important; font-style: normal !important; color: rgb(0, 0, 0); background-color: rgb(255, 255, 255);">Nous vous proposons des machines automatiques avec nos techniciens pour faire les gros travaux de conservation et le réseautage des billets noirs. Preparatifs et liquide de degivrage préparé, SSD solution anti-gel. Vectrol pâte, solution Tebi-Manetic, nettoyage chimique.</span><br></p>
-        <section class="clean-block clean-info dark" style="margin-bottom: 20px;">
+        <section class="clean-block clean-info dark" style="margin-bottom: 20px;border-radius: 10px;">
             <div class="container" style="padding: 0px;height: auto;">
-                <div class="videoWrapper" style="height: auto;padding: 0px;"><video class="embed-responsive-item" width="100%" height="auto" controls="" src="assets/videos/video4.mp4" style="height: auto;width: 100%;">
+                <div class="videoWrapper" style="height: auto;padding: 0px;"><video class="embed-responsive-item" width="100%" height="auto" controls="" src="assets/videos/video4.mp4" style="height: auto;width: 100%;border-radius: 10px;">
                         <source src="assets/videos/video4.mp4" type="video/mp4">
                     </video></div>
             </div>
         </section>
-        <section class="clean-block clean-info dark" style="margin-bottom: 20px;">
+        <section class="clean-block clean-info dark" style="margin-bottom: 20px;border-radius: 10px;">
             <div class="container" style="padding: 0px;height: auto;">
-                <div class="videoWrapper"><video class="embed-responsive-item" width="100%" height="auto" controls="" src="assets/videos/video5.mp4" style="width: 100%;height: auto;">
+                <div class="videoWrapper"><video class="embed-responsive-item" width="100%" height="auto" controls="" src="assets/videos/video5.mp4" style="width: 100%;height: auto;border-radius: 10px;">
                         <source src="assets/videos/video5.mp4" type="video/mp4">
                     </video></div>
             </div>
