--- a/article_1.html
+++ b/article_1.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Laboratoire Mondial</title>
+    <title>Diluant mixte auto nettoyant | Solution SSD | Nettoyage de billets</title>
     <meta property="og:url" content="https://laboratoire-mondial.com">
     <meta name="twitter:description" content="Laboratoire mondial expert international pour tous vos problèmes de décapage des billets de banque de toute nature euro, dollar, dinar, dirham de couleurs verte et noire, problème de produit de lavage des billets comme le laveur universel etc. problème de la poudre de chauffage, de conservation, de réactivation, d'extraction, d'activation etc. tous types de diluant, machine de chauffage et de nettoyage etc ne manquez pas de nous contacter rapidement nous avons aussi les meilleurs techniciens qualifiés à votre porté. Nous sommes à la disposition de tous les détenteurs des billets de banque semi-fini qui soient noir, vert ou bleu et qui désirent trouver une solution sur ces billets et qui ont une durée valide de moins de 4 ans et plus alors mon laboratoire de décapage. Le service technique est ouvert 24h/24 et mon équipe dévouer discret sont à votre service où que vous soyez nous dépêcherons un technicien pour votre entière satisfaction. Nous avons toutes les solutions pour tout type de billet, alors si vous avez besoin d'une solution en chimie monétaire n'hésitez pas à nous contacter. ">
     <meta property="og:image" content="http://camdev.me/assets/img/laboratoire mondial (1).png">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Laboratoire Mondial">
-    <meta name="description" content="Laboratoire mondial expert international pour tous vos problèmes de décapage des billets de banque de toute nature euro, dollar, dinar, dirham de couleurs verte et noire, problème de produit de lavage des billets comme le laveur universel etc. problème de la poudre de chauffage, de conservation, de réactivation, d'extraction, d'activation etc. tous types de diluant, machine de chauffage et de nettoyage etc ne manquez pas de nous contacter rapidement nous avons aussi les meilleurs techniciens qualifiés à votre porté. Nous sommes à la disposition de tous les détenteurs des billets de banque semi-fini qui soient noir, vert ou bleu et qui désirent trouver une solution sur ces billets et qui ont une durée valide de moins de 4 ans et plus alors mon laboratoire de décapage. Le service technique est ouvert 24h/24 et mon équipe dévouer discret sont à votre service où que vous soyez nous dépêcherons un technicien pour votre entière satisfaction. Nous avons toutes les solutions pour tout type de billet, alors si vous avez besoin d'une solution en chimie monétaire n'hésitez pas à nous contacter. ">
+    <meta name="twitter:title" content="Laboratoire Mondial | Nettoyage de billets">
     <meta name="twitter:image" content="http://camdev.me/assets/img/laboratoire mondial (1).png">
+    <meta name="description" content="Prototype de solution pour tous les produits de nettoyage gelé par mauvaise manipulation, ce diluant vous apporte une solution à tous vos problèmes vu son efficacité.">
     <link rel="icon" type="image/png" sizes="500x500" href="assets/img/laboratoire%20mondial%20(1).png">
     <link rel="icon" type="image/png" sizes="500x500" href="assets/img/laboratoire%20mondial%20(1).png">
     <link rel="icon" type="image/png" sizes="500x500" href="assets/img/laboratoire%20mondial%20(1).png">
